# beru

./: .gitignore  CMakeLists.txt  COPYING  README.md  VERSION  _config.yml  archive.html  beru  beru.contenthub.json  beru.desktop  beru.desktop.in  beru.desktop.tr  beru.pro  confinement.md  index.html  install.md  makeclick.sh  makedebsrc.sh  manifest.json  manifest.json.in  params.json
File/: qmldir
HttpServer/: qmldir
_layouts/: default.html  page.html  post.html
_posts/: 2013-08-11-introductions.md  2013-08-12-opening-a-file-in-qml.md  2013-08-14-reading-files-with-a-c++-plugin-in-qml.md  2013-08-15-listing-files-in-qml.md  2013-08-16-a-http-server-in-qml.md  2013-08-16-javascript-libraries.md  2013-08-17-first-light.md  2013-08-20-iterating-over-a-folderlistmodel.md  2013-08-21-qtwebview.experimental.md  2013-08-25-various-and-sundry.md  2013-08-26-beru-actually-kinda-usable-now.md  2013-08-28-reading-files-reading-tea-leaves.md  2013-09-04-using-u1db-procedurally.md  2013-09-06-conditionally-loading-modules.md  2013-09-12-call-for-testing.md  2013-09-13-this-damn-fool-just-might-pull-it-off.md  2013-09-15-the-october-surprise.md  2013-11-14-evaluating-the-app-showdown-evaluation.md  2014-01-14-new-version-with-desktop-support.md  2014-02-20-equal-colors.md  2014-06-28-beru-hack-day.md  2014-09-07-beta.md  2014-10-27-sprinted.md  2014-11-03-the-october-surprises.md  2014-11-07-10.md  2015-04-16-new-name-same-acronym.md
apparmor/: beru.access.json  beru.json
assets/: com.ubuntu.developer.rschroll.beru_0.1.1_arm.click  com.ubuntu.developer.rschroll.beru_0.1.2_amd64.click  com.ubuntu.developer.rschroll.beru_0.1.2_arm.click  com.ubuntu.developer.rschroll.beru_0.1.3_amd64.click  com.ubuntu.developer.rschroll.beru_0.1.3_arm.click  com.ubuntu.developer.rschroll.beru_0.1_amd64.click  com.ubuntu.developer.rschroll.beru_0.1_arm.click  com.ubuntu.developer.rschroll.beru_0.9.11_armhf.click  com.ubuntu.developer.rschroll.beru_0.9.1_arm.click  com.ubuntu.developer.rschroll.beru_0.9.6_armhf.quazip.click  com.ubuntu.developer.rschroll.beru_0.9.6_armhf.utopic.click  com.ubuntu.developer.rschroll.beru_0.9.7_amd64.click  com.ubuntu.developer.rschroll.beru_0.9.7_armhf.click  com.ubuntu.developer.rschroll.beru_0.9.9_armhf.click  com.ubuntu.developer.rschroll.beru_1.0.1_armhf.click  contents.ogv
color-playground/: index.html
debian/: changelog  control  copyright  install  rules
epubreader/: CMakeLists.txt  cbzreader.cpp  cbzreader.h  epubreader.cpp  epubreader.h  epubreader.pro  epubreaderplugin.cpp  epubreaderplugin.h  pdfreader.cpp  pdfreader.h  qmldir
filereader/: filereader.cpp  filereader.h  filereader.pro  filereaderplugin.cpp  filereaderplugin.h
filesystem/: CMakeLists.txt  filesystem.cpp  filesystem.h  filesystem.pro  filesystemplugin.cpp  filesystemplugin.h  qmldir
fontlister/: CMakeLists.txt  fontlister.cpp  fontlister.h  fontlister.pro  fontlisterplugin.cpp  fontlisterplugin.h  qmldir
html/: CMakeLists.txt  html.pro  index.html  instantslider.js  loadbook.js  messaging.js  styling.js
html/fonts/: CMakeLists.txt
html/monocle/: CMakeLists.txt
html/monocle/scripts/: CMakeLists.txt  monocore.js  monoctrl.js
html/monocle/styles/: CMakeLists.txt
jszip/: jszip-load.js  jszip.js  jszip.pro
mimetype/: CMakeLists.txt  mimetype.h
po/: CMakeLists.txt  beru-ca.po  beru-el.po  beru-is.po  beru-lv.po  beru-uk.po  ca.po  de.po  el.po  es.po  eu.po  fi.po  fr.po  gd.po  gl.po  hu.po  is.po  it.po  ja.po  lv.po  nb.po  nl.po  pl.po  ru.po  sl.po  uk.po
qhttpserver/: CMakeLists.txt  fileserver.cpp  fileserver.h  httpserverplugin.cpp  httpserverplugin.h  qhttpconnection.cpp  qhttpconnection.h  qhttprequest.h  qhttpresponse.cpp  qhttpresponse.h  qhttpserver.cpp  qhttpserver.h  qhttpserver.pro  qmldir
stylesheets/: stylesheet.css
tmp/: com.ubuntu.developer.rschroll.beru_0.9.6_armhf.flipper.click
ui/: BookPage.qml  BookSources.qml  BrowserPage.qml  CMakeLists.txt  DefaultCover.qml  Importer.qml  LocalBooks.qml  Reader.qml  Server.qml  encoder.sh  historystack.js  main.qml  qmlmessaging-userscript.js  qmlmessaging.js  ui.pro
ui/components/: CMakeLists.txt  ColorSelector.qml  FloatingButton.qml  FontSelector.qml  LabelVisual.qml  OptionSelector.qml  PageWithBottomEdge.qml  StylableOptionSelectorDelegate.qml  StyledButton.qml  SwipeControl.qml  TitlelessDialog.qml  Toolbar.qml  UbuntuWebView.qml
ui/images/: CMakeLists.txt
