file(GLOB HTML_MONOCLE_SRC_FILES
     RELATIVE ${CMAKE_CURRENT_SOURCE_DIR}
     README.md
)

foreach( SRC_FILE ${HTML_MONOCLE_SRC_FILES} )
     file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/${HTML_MONOCLE_SRC_FILES} DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
endforeach( SRC_FILE )

add_subdirectory(scripts)
add_subdirectory(styles)
